Fix margins and alignments

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ header {
 }
 
 header h1 {
-  margin: 1 1.5rem;
+  margin: 1rem 1.5rem;
   font-size: 1.8rem;
   font-weight: normal;
   font-style: italic;
